# maturana

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  scratch-axios-ka.mjs  scratch-axios-repro.mjs  scratch-claude-mcp-debug.sh  scratch-notion-search.sh  scratch-refproxy-test.sh  scratch-undici-repro.mjs  test_empty_agent.rs
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
crates/maturana-cli/: Cargo.toml
crates/maturana-cli/src/: a2a.rs  channels.rs  graph.rs  main.rs  orchestrate.rs  personal.rs  proactive.rs  rooms.rs  service.rs  session.rs  tests.rs  tui.rs
crates/maturana-cli/src/channels/: agentmail.rs  command_catalog.rs  command_handler.rs  console_bridge.rs  conversation.rs  delivery.rs  discord.rs  loops.rs  media.rs  models.rs  onboarding.rs  settings.rs  slack.rs  state.rs  subagents.rs  telegram.rs  telegram_api.rs  telegram_inbound.rs  telegram_live.rs  telegram_pairing.rs  telegram_routing.rs  telegram_state.rs  tests.rs  voice.rs
crates/maturana-cli/src/commands/: agent.rs  audit.rs  claude_refresh.rs  doctor.rs  hostd.rs  improve.rs  mod.rs  notify.rs  pipelock.rs  plugin.rs  repair.rs  search.rs  skill.rs  snapshot.rs  spec.rs  status.rs  tool.rs  up.rs  vm.rs  web.rs
crates/maturana-cli/src/orchestrate/: tests.rs
crates/maturana-core/: Cargo.toml
crates/maturana-core/src/: a2a.rs  animation.rs  audit.rs  bitwarden.rs  board.rs  claude_refresh.rs  cow.rs  hooks.rs  improvement.rs  lib.rs  materialize.rs  mcp.rs  orchestrator.rs  orchestrator_budget.rs  orchestrator_spawn.rs  pipelock.rs  pipelock_proxy.rs  roles.rs  room.rs  routing.rs  search.rs  secrets.rs  session_db.rs  skill_induct.rs  snapshots.rs  spec.rs  ssh_pin.rs  state.rs  tools.rs  validation.rs  worker.rs
crates/maturana-core/src/providers/: firecracker.rs  hyperv.rs  mod.rs
crates/maturana-core/src/tools/: forge.rs  wasm.rs
crates/maturana-graph/: Cargo.toml
crates/maturana-graph/src/: graph_rag.rs  lib.rs  model.rs  store.rs  vector.rs  wal.rs
crates/maturana-ingest/: Cargo.toml
crates/maturana-ingest/src/: lib.rs  office.rs
crates/maturana-ops/: Cargo.toml
crates/maturana-ops/src/: agents.rs  artifacts.rs  boards.rs  conversation.rs  deliverables.rs  deploy.rs  doctor.rs  firecracker.rs  graph.rs  guest_worker.rs  health.rs  host_setup.rs  hostd.rs  lib.rs  orchestration.rs  placement.rs  planner.rs  plugins.rs  runtime_plane.rs  ssh.rs  verification.rs  windows_harness.rs
crates/maturana-plugin/: Cargo.toml
crates/maturana-web/: Cargo.toml
crates/maturana-web/assets/: index.html  login.html
crates/maturana-web/assets/css/: app.css  tokens.css
crates/maturana-web/assets/js/: anim.js  app.js  chat.js  console.js  dashboard.js  themes.js  ui.js  ws.js
crates/maturana-web/src/: assets.rs  auth.rs  lib.rs  server.rs  state.rs
crates/maturana-web/src/api/: agents.rs  boards.rs  channels.rs  egress.rs  graph.rs  mod.rs  ops.rs  orchestrator.rs  pipelock.rs  plugins.rs  runtime.rs  schedules.rs  search.rs  sessions.rs  skills.rs  system.rs  tools.rs  voice.rs
crates/maturana-web/src/harness/: codex.rs  mod.rs  opencode.rs  parse.rs
crates/maturana-web/src/ws/: mod.rs  protocol.rs
crates/maturana-web/tests/fixtures/codex-exec-json/: simple.jsonl  tooluse.jsonl
docs/: README.md  a2a-rooms.md  harness-operations.md  hermes-parity.md  linux-firecracker-harnesses.md  maturana-spec.md  multi-agent-orchestration.md  mvp-plan.md  openclaw-parity.md  orchestration.md  personal-agent-mvp.md  personal-agent-platform.md  pipelock-live-verification.md  plugins.md  script-boundary.md  self-improvement-rl.md  skill-workflows.md  snapshot-operations.md  source-modularity-audit.md  wasm-tools.md  web-cockpit.md  web-ui-comparison.md
examples/: MATURANA.claude-firecracker.md  MATURANA.claude-hyperv.md  MATURANA.codex-demo.md  MATURANA.codex-firecracker.md  MATURANA.codex-hyperv.md  MATURANA.firecracker-demo.md  MATURANA.hyperv-real.md  MATURANA.opencode-firecracker.md  MATURANA.opencode-hyperv.md
plugins/maturana-builtins/: MATURANA_PLUGIN.toml
scripts/: bootstrap.ps1  build-windows-gnu.ps1  build-windows-msvc.ps1  ci.ps1  demo-hyperv-real.ps1  demo-windows.ps1  firecracker-doctor.sh  firecracker-inspect.sh  firecracker-launch.sh  firecracker-prepare-assets.sh  firecracker-setup-tap.sh  firecracker-stop.sh  get-ubuntu-cloudimg.ps1  hyperv-status.ps1  init-agent-ssh-key.ps1  inspect-ubuntu-hyperv-agent.ps1  install-firecracker-host.sh  install-hostd-task.ps1  install-sessiond-task.ps1  install-telegram-channel-task.ps1  install-windows.ps1  install.ps1  install.sh  invoke-hostd-ubuntu-launch.ps1  kvm-enable.sh  launch-ubuntu-cloudimg-hyperv.ps1  maturana-hostd.ps1  maturana-logo.py  maturana.ps1  refresh-guest-worker.ps1  release.sh  repair-windows-harnesses.ps1  run-elevated.ps1  set-vm-autostart.ps1  start-hyperv-agent.ps1  test-pipelock-proxy-aidev.ps1  test-pipelock-proxy-firecracker-live.sh  test-pipelock-proxy-live.ps1  uninstall-hostd-task.ps1  uninstall-windows.ps1  (+1 more)
skills/maturana-a2a/: SKILL.md
skills/maturana-agent-create/: SKILL.md
skills/maturana-agent-inspect/: SKILL.md
skills/maturana-agent-launch/: SKILL.md
skills/maturana-agent-update/: SKILL.md
skills/maturana-agent-validate/: SKILL.md
skills/maturana-agentmail/: SKILL.md
skills/maturana-board/: SKILL.md
skills/maturana-browse/: SKILL.md
skills/maturana-cli-actions/: SKILL.md
skills/maturana-deploy/: SKILL.md
skills/maturana-develop/: SKILL.md
skills/maturana-github/: SKILL.md
skills/maturana-graph/: SKILL.md
skills/maturana-hostd/: SKILL.md
skills/maturana-image-gen/: SKILL.md
skills/maturana-notion/: SKILL.md
skills/maturana-orchestrate/: SKILL.md
skills/maturana-orchestration-board/: SKILL.md
skills/maturana-orchestrator-loop/: SKILL.md
skills/maturana-personal-agent/: SKILL.md
skills/maturana-pipelock/: SKILL.md
skills/maturana-plugin/: SKILL.md
skills/maturana-schedule/: SKILL.md
skills/maturana-security-review/: SKILL.md
skills/maturana-self-forge/: SKILL.md
skills/maturana-web/: SKILL.md
(+24 files in other folders)
