[workspace]
members = [
    "crates/maturana-cli",
    "crates/maturana-core",
    "crates/maturana-graph",
    "crates/maturana-ingest",
    "crates/maturana-ops",
    "crates/maturana-plugin",
    "crates/maturana-web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/maturana-ai/maturana"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.16", features = ["derive", "env"] }
dirs = "5.0.1"
rand = "0.8.5"
rcgen = { version = "0.13.2", default-features = true, features = ["x509-parser"] }
rustls = { version = "0.23.12", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8.0"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
toml = "0.8.19"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
sha2 = "0.10.8"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
# Web cockpit only (crates/maturana-web); the rest of the workspace stays sync.
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time"] }
include_dir = "0.7.4"
