[package]
name = "maturana-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "maturana"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
maturana-core = { path = "../maturana-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
