[package]
name = "maturana-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "maturana"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
maturana-core = { path = "../maturana-core" }
maturana-graph = { path = "../maturana-graph" }
maturana-ingest = { path = "../maturana-ingest" }
maturana-web = { path = "../maturana-web" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
# Slack Socket Mode is a client WebSocket (Telegram/AgentMail are HTTP-pollable).
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
# Console TUI (`maturana agent chat`). ratatui re-exports crossterm, so we don't
# pin a second copy.
ratatui = "0.29"

[features]
# The WebAssembly engine + on-the-fly forge ship by default: agents are told the
# runtime is "provided to them", so `maturana tool run` and `/session/forge` must
# actually execute. Build without it (`--no-default-features`) only for a lean
# control-plane-only binary.
default = ["wasm-runtime"]
wasm-runtime = ["maturana-core/wasm-runtime"]
