[package]
name = "maturana-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
dirs.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
rusqlite.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
