[package]
name = "maturana-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
dirs.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
rusqlite.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
wasmtime = { version = "27", optional = true, default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = { version = "27", optional = true }

[features]
default = []
# Opt-in WebAssembly execution engine for the agent tool framework. Kept
# behind a feature so the control plane stays dependency-light and fast to
# build; enable with `--features wasm-runtime` to actually run tools.
wasm-runtime = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dev-dependencies]
wat = "1"
