[package]
name = "maturana-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
dirs.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
rusqlite.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
wasmtime = { version = "27", optional = true, default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = { version = "27", optional = true }
# WAT -> WASM assembler, used by the on-the-fly "forge" so an agent can author a
# capability in WebAssembly text (no external toolchain) and run it live.
wat = { version = "1", optional = true }

[features]
default = []
# WebAssembly execution engine + on-the-fly forge for the agent tool framework.
# Behind a feature so the library stays dependency-light, but enabled by default
# in the `maturana` binary (see maturana-cli) so the runtime is always provided.
wasm-runtime = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wat"]
