[package]
name = "maturana-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# MaturanaGraph: a from-scratch, dependency-light property-graph database with a
# GraphRAG retrieval layer. No third-party graph, vector, or storage engine --
# only serialization and id/time helpers already used across the workspace.
[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
