[package]
name = "maturana-ops"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
maturana-core = { path = "../maturana-core" }
maturana-ingest = { path = "../maturana-ingest" }
maturana-plugin = { path = "../maturana-plugin" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
